# Gomoku-Engine-Version0

./: .gitignore  CMakeLists.txt  README.md  game_20260103_073440.txt  outline.md
include/: board.hpp  heuristic.hpp  mcts.hpp  types.hpp  uci.hpp
src/: board.cpp  heuristic.cpp  main.cpp  mcts.cpp  uci.cpp
tests/: test_engine.cpp
